src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum_Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Epic Story</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>Technical Story</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Scenario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scrum_Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>